# smartmove

./: .gitignore  LICENSE  MANIFEST.in  README.rst  TODO.md  __init__.py  analysis.py  cfg_paths.yaml  config.py  glidepy.py  model_ann.py  model_mcmc.py  requirements.in  requirements.txt  requirements_test.in  requirements_test.txt  respirometry.py  setup.cfg  setup.py  utils.py  utils_ann.py  utils_ctd.py  utils_lleo.py  utils_seal_physio.py  utils_smartmove.py  utils_smru.py
_templates/: cfg_project.yml
ann/: ann.py  post.py  pre.py  utils_ann.py
docs/: Makefile  make.bat  pre-processing.md
docs/source/: analysis.rst  ann.rst  ann_guide.rst  api.rst  conf.py  configuration_files.rst  glide_identification.rst  glideid.rst  index.rst  install.rst  pre-processing.rst  project_setup.rst  visuals.rst
glideid/: glideid.py  utils_ctd.py  utils_lleo.py
smartmove/: __init__.py  analysis.py  config.py  utils.py
smartmove/_templates/: cfg_glide.yml  cfg_subglide-filter.yml
smartmove/ann/: __init__.py  ann.py  post.py  postprocess.py  pre.py  preprocess.py  utils_ann.py
smartmove/glideid/: __init__.py  glideid.py  utils_ctd.py  utils_lleo.py
smartmove/visuals/: figures.py  table_attributes.py  tables.py  utils.py
src/smartmove/: __init__.py  analysis.py  config.py  utils.py
src/smartmove/ann/: _ann.py  (+6 more)
templates/: cfg_ann.yml  cfg_experiments.yaml  cfg_project.yaml  cfg_project.yml
visuals/: README.md  __init__.py  dataexplore.py  figures.py  maps.py  plots.py  table_attributes.py  tables.py  utils.py
visuals/latex/: __init__.py  tables.py  utils.py
(+15 files in other folders)
