[metadata]
description-file = README.md

[flake8]
max-line-length = 160
ignore =
    E226
    E501
    W503

[tool:pytest]
flake8-max-line-length = 160
flake8-ignore =
    E203
    E501
    W503
    __init__.py UnusedImport
    *.py E201
    #doc/source/conf.py ALL
norecursedirs = doc/* **/_version.py
addopts = --doctest-modules --ignore=src/smartmove/_version.py
